feat: add Font Awesome packages and creators SVG asset
Add Font Awesome core, brand icons, and React bindings to project
dependencies (and lockfile) to support brand icon usage in the UI.
Also add `public/creators-of-hami.svg` as a new static graphic asset
for creator-related website content.feat: add Font Awesome packages and creators SVG asset

Add Font Awesome core, brand icons, and React bindings to project
dependencies (and lockfile) to support brand icon usage in the UI.
Also add `public/creators-of-hami.svg` as a new static graphic asset
for creator-related website content.

Signed-off-by: Jimmy Song <rootsongjc@gmail.com>

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -780,7 +780,27 @@
     "platformTitle": "Dynamia AI Platform",
     "getDemo": "Get a demo",
     "pricing": "Pricing",
-    "poweredByHami": "Powered by HAMi"
+    "poweredByHami": "Powered by HAMi",
+    "companyDescription": "Dynamia focuses on GPU virtualization and scheduling, leading the CNCF open-source project HAMi.",
+    "companyIntro": "Enterprise-grade GPU virtualization and scheduling platform, optimized from the CNCF open-source project HAMi.",
+    "about": "About",
+    "aboutCompany": "Company Overview",
+    "news": "News",
+    "partners": "Partners",
+    "joinUs": "Join Us",
+    "resources": "Resources",
+    "documentation": "Documentation",
+    "blog": "Blog",
+    "caseStudies": "Case Studies",
+    "community": "Community",
+    "github": "GitHub",
+    "slack": "Slack",
+    "discord": "Discord",
+    "wechat": "WeChat",
+    "contactSection": "Contact Us",
+    "emailUs": "Email Us",
+    "email": "info@dynamia.ai",
+    "socialMedia": "Follow Us"
   },
   "search": {
     "placeholder": "Search...",
