Add KubeCon notice banner

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -25,6 +25,11 @@
     "freeTrial": "Apply for Trial",
     "requestDemo": "Request Demo",
     "openMenu": "Open menu",
+    "eventBannerLabel": "KubeCon + CloudNativeCon Europe:",
+    "eventBannerMessage": "HAMi booth at Project Pavilion P-13B. Meet the Dynamia team on Mar 24 (15:10-19:00) and Mar 26 (12:30-14:00).",
+    "eventBannerDetails": "Details",
+    "eventBannerDetailsAria": "Open KubeCon Europe details page",
+    "eventBannerClose": "Close notification banner",
     "caseTelecom": "Telecom Provider Case",
     "caseTelecomDesc": "Learn how a telecom provider leverages HAMi for GPU virtualization and heterogeneous device management",
     "caseKeHoldings": "Ke Holdings Case",
