--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -25,6 +25,11 @@
     "freeTrial": "申请试用",
     "requestDemo": "申请演示",
     "openMenu": "打开菜单",
+    "eventBannerLabel": "KubeCon + CloudNativeCon Europe：",
+    "eventBannerMessage": "HAMi 社区展位：Project Pavilion P-13B。Dynamia 团队在 3 月 24 日 15:10-19:00、3 月 26 日 12:30-14:00 与你现场交流。",
+    "eventBannerDetails": "活动详情",
+    "eventBannerDetailsAria": "打开 KubeCon Europe 活动详情页面",
+    "eventBannerClose": "关闭顶部通知",
     "caseTelecom": "电信运营商案例",
     "caseTelecomDesc": "了解某电信运营商如何利用 HAMi 实现 GPU 虚拟化与异构设备管理",
     "caseKeHoldings": "贝壳案例",
